Resolve copilot merge conflicts & Bugs